src/app/components/blocks/map/map.module.css
.titleWrapper {
    display: flex;
    justify-content: space-between;
    padding: 280px 19% 0;

    @media (max-width: 1200px) {
        flex-direction: column;
        padding: 40px 10%;
    }
}

.title {
    font-size: 50px;
    font-weight: 700;
    line-height: normal;
    margin-right: 40px;
    letter-spacing: 0.3px;
    color: #6dc7cb;

    @media (max-width: 1200px) {
        font-size: 2.5rem;
        margin: 0 0 30px;
        font-size: 30px;
    }
}

.description {
    color: #2d5568;
    font-family: Menlo;
    width: 50%;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.9;
    letter-spacing: 0.2px;
    margin-bottom: 50px;

    @media (max-width: 1200px) {
        font-size: 14px;
        margin-bottom: 30px;
        width: 100%;
    }
}

.mapWrapper {
    width: 100%;
    height: 600px;
    aspect-ratio: 4 / 1;

    @media (max-width: 1200px) {
        height: 400px;
    }
}

.legendList {
    margin: 0;
    padding: 60px;
    list-style-type: none;
    display: flex;
    justify-content: center;

    @media (max-width: 1200px) {
        padding: 30px;
        justify-content: center;
    }
}

.legendItem {
    display: flex;
    align-items: center;
    margin-right: 60px;

    @media (max-width: 1200px) {
        width: 25%;
        margin-right: 20px;
    }
}

.legendItem:last-child {
    margin-right: 0;
}

.legendColor {
    width: 60px;
    height: 20px;
    margin-right: 20px;

    @media (max-width: 1200px) {
        width: 30%;
        margin-right: 10px;
    }
}

.legendDescription {
    font-family: Inter;
    font-size: 14px;
    color: #2d5568;

    @media (max-width: 1200px) {
        width: 60%;
        font-size: 12px;
    }
}

.tooltip {
    padding: 10px 14px;
    max-width: 17%;
    height: max-content;
    background-color: rgba(255, 255, 255, 0.9);
    border-radius: 3px;
    box-shadow: 1px 2px 4px 1px grey;
    pointer-events: none;
    visibility: hidden;
    position: fixed;
    z-index: 1000;

    @media (max-width: 1200px) {
        max-width: 40%;
    }
}

.tooltipDescription {
    font-family: Inter;
    font-size: 14px;
    letter-spacing: 0.4px;
    text-align: left;

    @media (max-width: 1200px) {
        font-size: 12px;
    }
}

.tooltipTitle {
    font-weight: 600;
    margin-bottom: 3px;
    font-family: Inter;
    font-size: 15px;
    letter-spacing: 0.4px;
    text-align: left;

    @media (max-width: 1200px) {
        font-size: 13px;
    }
}

